--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Velox CMS</string>
+    <string name="movie_title_placeholder">Movie Title</string>
 
     <string-array name="encoding_for_array">
         <item>Censor</item>
